syntax = "proto3";

package user.v1;

option go_package = "github.com/qkitzero/user/gen/go/user/v1";

import "google/api/annotations.proto";

service UserService {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){
		option (google.api.http) = {
			post: "/v1/user"
			body: "*"
		};
	};
	rpc GetUser (GetUserRequest) returns (GetUserResponse){
		option (google.api.http) = {
			get: "/v1/user"
		};
	};
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){
		option (google.api.http) = {
			patch: "/v1/user"
			body: "*"
		};
	};
}

message Date {
	int32 year = 1;
	int32 month = 2;
	int32 day = 3;
}

message CreateUserRequest {
	string display_name = 1;
	Date birth_date = 2;
}

message CreateUserResponse {
	string user_id = 1;
}

message GetUserRequest {
}

message GetUserResponse {
	string user_id = 1;
	string display_name = 2;
	Date birth_date = 3;
}

message UpdateUserRequest {
	string display_name = 1;
}

message UpdateUserResponse {
	string user_id = 1;
	string display_name = 2;
}